src/test/ui/issues/issue-3707.stderr
error[E0599]: no method named `boom` found for type `&Obj` in the current scope
  --> $DIR/issue-3707.rs:10:14
   |
LL |         self.boom();
   |         -----^^^^
   |         |    |
   |         |    this is an associated function, not a method
   |         help: use associated function syntax instead: `Obj::boom`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: candidate defined here:
  --> $DIR/issue-3707.rs:6:5
   |
LL |     pub fn boom() -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^ the candidate is defined in an impl for the type `Obj`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
